refactor: update android link to open model with camera

--- a/fish.html
+++ b/fish.html
@@ -28,7 +28,7 @@
         if (os === "iOS") {
             arLink.href = "https://omerkonan.github.io/ar-model-viewer/ios_models/fish.usdz";
         } else if (os === "Android") {
-            arLink.href = "https://omerkonan.github.io/ar-model-viewer/android_models/fish.glb";
+            arLink.href = "intent://arvr.google.com/scene-viewer/1.0?file=https://omerkonan.github.io/ar-model-viewer/android_models/fish.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;";
         } else {
             arLink.href = "#";
             arLink.innerText = "AR not supported on this device";
